v6 - rendering and spacing fixes

--- a/assets/scss/_archive.scss
+++ b/assets/scss/_archive.scss
@@ -22,11 +22,8 @@
   }
 
   .project {
+    @extend %clear;
     width: 100%;
-    margin-bottom: 6.0rem;
-    @include breakpoint (baby-bear) {
-      margin-bottom: 11.0rem;
-    }
   }
 
   .project-description {
@@ -42,6 +39,7 @@
 
     .project-name {
       font-weight: bold;
+      margin-bottom: 0;
     }
 
     [class*="blob"] {
